include/tonc_tte.h


//\}



// --------------------------------------------------------------------
// CLASSES
// --------------------------------------------------------------------

//! Glyph render function format.
typedef void (*fnDrawg)(uint gid);


//! Erase rectangle function format.
typedef void (*fnErase)(int left, int top, int right, int bottom);




//! Font description struct.
/*!	The \c TFont contains a description of the font, including pointers
	to the glyph data and width data (for VWF fonts), an ascii-offset
	for when the first glyph isn't for ascii-null (which is likely. 
	Usually it starts at ' ' (32)).<br>
	The font-bitmap is a stack of cells, each containing one glyph 
	each. The cells and characters need not be the same size, but 
	the character glyph must fit within the cell.<br>

	The formatting of the glyphs themselves should fit the rendering 
	procedure. The default renderers use 1bpp 8x8 tiled graphics, 
	where for multi-tiled cells the tiles are in a <b>vertical</b> 
	'strip' format. In an 16x16 cell, the 4 tiles would be arranged as:

	<table border=1 cellpadding=2 cellspacing=0>
	<tr> <td>0</td> <td>2</td></tr>
	<tr> <td>1</td> <td>3</td></tr>
	</table>
*/
typedef struct TFont
{
	const void	*data;		//!< Character data.
	const u8	*widths;	//!< Width table for variable width font.
	const u8	*heights;	//!< Height table for variable height font.
	u16	charOffset;			//!< Character offset
	u16	charCount;			//!< Number of characters in font.
	u8	charW;				//!< Character width (fwf).
	u8	charH;				//!< Character height.
	u8	cellW;				//!< Glyph cell width.
	u8	cellH;				//!< Glyph cell height.
	u16	cellSize;			//!< Cell-size (bytes).
	u8	bpp;				//!< Font bitdepth;
	u8	extra;				//!< Padding. Free to use.	
} TFont;



//! TTE context struct.
typedef struct TTC
{
	// Members for renderers
	TSurface dst;			//!< Destination surface.
	s16	cursorX;			//!< Cursor X-coord.
	s16	cursorY;			//!< Cursor Y-coord.
	TFont *font;			//!< Current font.
	u8	*charLut;			//!< Character mapping lut. (if any).
	u16	cattr[4];			//!< ink, shadow, paper and special color attributes.
	// Higher-up members
	u16	flags0;
	u16	ctrl;				//!< BG control flags.	(PONDER: remove?)
	u16	marginLeft;
	u16	marginTop;
	u16	marginRight;
	u16 marginBottom;
	s16	savedX;
	s16	savedY;
	// Callbacks and table pointers
	fnDrawg	drawgProc;			//!< Glyph render procedure.
	fnErase	eraseProc;			//!< Text eraser procedure.
	const TFont	**fontTable;	//!< Pointer to font table for \{f}.
	const char	**stringTable;	//!< Pointer to string table for \{s}.
} TTC;


//\}

/*!	\} */	// grpTTE


// --------------------------------------------------------------------
// PROTOTYPES
// --------------------------------------------------------------------

// === Operations =====================================================

/*! \addtogroup grpTTEOps		*/
/*!	\{	*/

void tte_set_context(TTC *tc);

INLINE TTC	*tte_get_context();


INLINE uint	tte_get_glyph_id(int ch);

INLINE int	tte_get_glyph_width(uint gid);

INLINE int  tte_get_glyph_height(uint gid);

INLINE const void *tte_get_glyph_data(uint gid);



void tte_set_color(eint type, u16 clr);

void tte_set_colors(const u16 colors[]);


void tte_set_color_attr(eint type, u16 cattr);

void tte_set_color_attrs(const u16 cattrs[]);


char *tte_cmd_default(const char *str);


int tte_putc(int ch);

int	tte_write(const char *text);

int	tte_write_ex(int x, int y, const char *text, const u16 *clrlut);



void tte_erase_rect(int left, int top, int right, int bottom);

void tte_erase_screen(void);

void tte_erase_line(void);


POINT16 tte_get_text_size(const char *str);


void tte_init_base(const TFont *font, fnDrawg drawProc, fnErase eraseProc);


/*! \}	*/	// grpTTEOps


// === Attributes functions ===========================================

/*! \addtogroup grpTTEAttr		*/
/*!	\{	*/

// --- getters ---

INLINE void tte_get_pos(int *x, int *y);

INLINE u16 tte_get_ink(void);

INLINE u16 tte_get_shadow(void);

INLINE u16 tte_get_paper(void);

INLINE u16 tte_get_special(void);


INLINE TSurface *tte_get_surface(void);

INLINE TFont *tte_get_font(void);

INLINE fnDrawg tte_get_drawg(void);

INLINE fnErase tte_get_erase(void);


INLINE char **tte_get_string_table(void);

INLINE TFont **tte_get_font_table(void);


// --- setters ---
INLINE void tte_set_pos(int x, int y);

INLINE void tte_set_ink(u16 cattr);

INLINE void tte_set_shadow(u16 cattr);

INLINE void tte_set_paper(u16 cattr);

INLINE void tte_set_special(u16 cattr);


INLINE void tte_set_surface(const TSurface *srf);

INLINE void tte_set_font(const TFont *font);

INLINE void tte_set_drawg(fnDrawg proc);

INLINE void tte_set_erase(fnErase proc);


INLINE void tte_set_string_table(const char *table[]);

INLINE void tte_set_font_table(const TFont *table[]);


void tte_set_margins(int left, int top, int right, int bottom);



/*! \}	*/	// grpTTEAttr


// === Console functions ==============================================

/*! \addtogroup grpTTEConio	*/
/*!	\{	*/

void tte_init_con(void);

int tte_cmd_vt100(const char *text);


ssize_t tte_con_write(struct _reent *r, int fd, const char *text, size_t len);

ssize_t tte_con_nocash(struct _reent *r, int fd, const char *text, size_t len);

/*!	\}	*/


// === Render families ================================================

/*! \addtogroup grpTTEMap	*/
/*!	\{	*/

//! \name Regular tilemaps
//\{
void tte_init_se(int bgnr, u16 bgcnt, SCR_ENTRY se0, u32 clrs, u32 bupofs, 
	const TFont *font, fnDrawg proc);


void se_erase(int left, int top, int right, int bottom);


void se_drawg_w8h8(uint gid);

void se_drawg_w8h16(uint gid);

void se_drawg(uint gid);

void se_drawg_s(uint gid);

//\}

//! \name Affine tilemaps
//\{
void tte_init_ase(int bgnr, u16 bgcnt, u8 ase0, u32 clrs, u32 bupofs, 
	const TFont *font, fnDrawg proc);


void ase_erase(int left, int top, int right, int bottom);


void ase_drawg_w8h8(uint gid);

void ase_drawg_w8h16(uint gid);

void ase_drawg(uint gid);

void ase_drawg_s(uint gid);

//\}

/*!	\}	*/


/*! \addtogroup grpTTEChr4c	*/
/*!	\{	*/

//! \name 4bpp tiles
//\{
void tte_init_chr4c(int bgnr, u16 bgcnt, u16 se0, u32 cattrs, u32 clrs, 
	const TFont *font, fnDrawg proc);


void chr4c_erase(int left, int top, int right, int bottom);

IWRAM_CODE void chr4c_drawg_b1cts_fast(uint gid);

IWRAM_CODE void chr4c_drawg_b4cts_fast(uint gid);


//void chr4c_drawg_b4cos(uint gid);
//IWRAM_CODE int chr4c_drawg_co_fast(uint gid);
//\}

/*!	\}	*/


/*! \addtogroup grpTTEChr4r	*/
/*!	\{	*/

//! \name 4bpp tiles
//\{
void tte_init_chr4r(int bgnr, u16 bgcnt, u16 se0, u32 cattrs, u32 clrs, 
	const TFont *font, fnDrawg proc);


void chr4r_erase(int left, int top, int right, int bottom);


/*!	\}	*/


// --------------------------------------------------------------------
// INLINES
// --------------------------------------------------------------------

//! Get the master text-system
INLINE TTC *tte_get_context(void)
{	return gp_tte_context;							}



// --- Font-specific functions ---

//! Get the glyph index of character \a ch.
INLINE uint tte_get_glyph_id(int ch)
{	
	TTC *tc= tte_get_context();
	ch -= tc->font->charOffset;
	return tc->charLut ? tc->charLut[ch] : ch;
}


//! Get the glyph data of glyph \a id.
INLINE const void *tte_get_glyph_data(uint gid)
{
	TTC *tc= tte_get_context();
	TFont *font= tc->font;
	return ((u8*)font->data) + gid*font->cellSize;
}


//! Get the width of glyph \a id.
INLINE int tte_get_glyph_width(uint gid)
{
	TFont *font= tte_get_context()->font;
	return font->widths ? font->widths[gid] : font->charW;
}


//! Get the height of glyph \a id.
INLINE int tte_get_glyph_height(uint gid)
{
	TFont *font= tte_get_context()->font;
	return font->heights ? font->heights[gid] : font->charH;
}


// === Attributes ===



//! Set the text  surface.
INLINE void tte_set_surface(const TSurface *srf)
{	tte_get_context()->dst= *srf;					}


//! Get a pointer to the text surface.
INLINE TSurface *tte_get_surface()
{	return &tte_get_context()->dst;					}




//! Set cursor position
INLINE void tte_set_pos(int x, int y)
{	
	tte_get_context()->cursorX= x;
	tte_get_context()->cursorY= y;
}


//! Get cursor position
INLINE void tte_get_pos(int *x, int *y)
{
	if(x)	*x= tte_get_context()->cursorX;
	if(y)	*y= tte_get_context()->cursorY;	
}



//! Set the font
INLINE void tte_set_font(const TFont *font)
{	tte_get_context()->font= (TFont*)font;			}


//! Get the active font
INLINE TFont *tte_get_font(void)
{	return tte_get_context()->font;					}



//! Set ink color attribute.
INLINE void tte_set_ink(u16 cattr)
{	tte_get_context()->cattr[TTE_INK]= cattr;		}


//! Set shadow color attribute.
INLINE void tte_set_shadow(u16 cattr)
{	tte_get_context()->cattr[TTE_SHADOW]= cattr;	}


//! Set paper color attribute.
INLINE void tte_set_paper(u16 cattr)
{	tte_get_context()->cattr[TTE_PAPER]= cattr;		}


//! Set special color attribute.
INLINE void tte_set_special(u16 cattr)
{	tte_get_context()->cattr[TTE_SPECIAL]= cattr;	}



//! Get ink color attribute.
INLINE u16 tte_get_ink(void)
{	return tte_get_context()->cattr[TTE_INK];		}


//! Get shadow color attribute.
INLINE u16 tte_get_shadow(void)
{	return tte_get_context()->cattr[TTE_SHADOW];	}


//! Get paper color attribute.
INLINE u16 tte_get_paper(void)
{	return tte_get_context()->cattr[TTE_PAPER];		}


//! Get special color attribute.
INLINE u16 tte_get_special(void)
{	return tte_get_context()->cattr[TTE_SPECIAL];	}



//! Set the character plotter
INLINE void tte_set_drawg(fnDrawg proc)
{	tte_get_context()->drawgProc= proc;				}


//! Get the active character plotter
INLINE fnDrawg tte_get_drawg(void)
{	return tte_get_context()->drawgProc;			}



//! Set the character plotter
INLINE void tte_set_erase(fnErase proc)
{	tte_get_context()->eraseProc= proc;				}


//! Get the character plotter
INLINE fnErase tte_get_erase(void)
{	return tte_get_context()->eraseProc;			}



//! Set string table
INLINE void tte_set_string_table(const char *table[])
{	tte_get_context()->stringTable= table;			}


//! Get string table
INLINE char **tte_get_string_table(void)
{	return (char**)tte_get_context()->stringTable;	}



//! Set font table
INLINE void tte_set_font_table(const TFont *table[])
{	tte_get_context()->fontTable= table;			}


//! Get font table
INLINE TFont **tte_get_font_table(void)
{	return (TFont**)tte_get_context()->fontTable;	}