natu/private/tte.nim


proc tteSetContext*(tc: TextContext) {.importc: "tte_set_context", header: "tonc.h".}
  ## Set the master context pointer.
proc tteGetContext*(): TextContext {.importc: "tte_get_context", header: "tonc.h".}
  ## Get the master context pointer.
proc tteGetGlyphId*(ch: int): uint {.importc: "tte_get_glyph_id", header: "tonc.h".}
  ## Get the glyph index of character `ch`.
proc tteGetGlyphWidth*(gid: uint): int {.importc: "tte_get_glyph_width", header: "tonc.h".}
  ## Get the width of glyph `id`.
proc tteGetGlyphHeight*(gid: uint): int {.importc: "tte_get_glyph_height", header: "tonc.h".}
  ## Get the height of glyph `id`.
proc tteGetGlyphData*(gid: uint): pointer {.importc: "tte_get_glyph_data", header: "tonc.h".}
  ## Get the glyph data of glyph `id`.
proc tteSetColor*(typ: uint; clr: uint16) {.importc: "tte_set_color", header: "tonc.h".}
  ## Set color of `type` to `cattr`.
proc tteSetColors*(colors: ptr uint16) {.importc: "tte_set_colors", header: "tonc.h".}
  ## Load important color data.
proc tteSetColorAttr*(typ: uint; cattr: uint16) {.importc: "tte_set_color_attr", header: "tonc.h".}
  ## Set color attribute of `type` to `cattr`.
proc tteSetColorAttrs*(cattrs: ptr uint16) {.importc: "tte_set_color_attrs", header: "tonc.h".}
  ## Load important color attribute data.
proc tteCmdDefault*(str: cstring): cstring {.importc: "tte_cmd_default", header: "tonc.h".}
  ## Text command handler.
  ## Takes commands formatted as "#{[cmd]:[opt];[[cmd]:[opt];...]} and deals with them.
  ## Command list:
  ## - ``P``             Set cursor to margin top-left.
  ## - ``Ps``            Save cursor position
  ## - ``Pr``            Restore cursor position.
  ## - ``P:#x,#y``       Set cursorX/Y to `x`, `y`.
  ## - ``X``             Set cursorX to margin left.
  ## - ``X:#x``          Set cursorX to `x`.
  ## - ``Y``             Set cursorY to margin top.
  ## - ``Y:#y``          Set cursorX to `y`.
  ## - ``c[ispx]:#val``  Set ink/shadow/paper/special color to `val`.
  ## - ``e[slbfr]``      Erase screen/line/backward/forward/rect
  ## - ``m:#l,#t,#r,#b`` Set all margins
  ## - ``m[ltrb]:#val``  Set margin to `val`.
  ## - ``p:#x,#y``       Move cursorX/Y by `x`, `y`.
  ## - ``w:#val``        Wait `val` frames.
  ## - ``x:#x``          Move cursorX by `x`.
  ## - ``y:#y``          Move cursorX by `y`.
  ##  
  ## Examples:
  ## - ``#{X:32}``        Move to `x` = 32;
  ## - ``#{ci:0x7FFF}``   Set ink color to white.
  ## - ``#{w:120;es;P}``  Wait 120 frames, clear screen, return to top of screen.
  ##
  ## Arguments:
  ## `str` Start of command. Assumes the initial "\{" is lobbed off already.
  ## Returns: pointer to after the parsed command.
  ## Note: Routine does text wrapping. Make sure margins are set.

proc ttePutc*(ch: int|char): int {.importc: "tte_putc", header: "tonc.h", discardable.}
  ## Plot a single character; does wrapping too.
  ## `ch` Character to plot (not glyph-id).
  ## Returns: Character width.
  ## Note: Overhead: ~70 cycles.

proc tteWrite*(text: cstring): int {.importc: "tte_write", header: "tonc.h", discardable.}
  ## Render a string.
  ## `text` String to parse and write.
  ## Returns: Number of parsed characters.

proc tteWriteEx*(x: int; y: int; text: cstring; clrlut: ptr uint16): int {.importc: "tte_write_ex", header: "tonc.h", discardable.}
  ## Extended string writer, with positional and color info

proc tteEraseRect*(left: int; top: int; right: int; bottom: int) {.importc: "tte_erase_rect", header: "tonc.h".}
  ## Erase a porttion of the screen (ignores margins)

proc tteEraseScreen*() {.importc: "tte_erase_screen", header: "tonc.h".}
  ## Erase the screen (within the margins).

proc tteEraseLine*() {.importc: "tte_erase_line", header: "tonc.h".}
  ## Erase the whole line (within the margins).

proc tteGetTextSize*(str: cstring): Point16 {.importc: "tte_get_text_size", header: "tonc.h".}
  ## Get the size taken up by a string.
  ## `str` String to check.
  ## Returns: width and height, packed into a POINT16.
  ## Note: This function *ignores* tte commands, so don't use on strings that use commands.

proc tteInitBase*(font: Font; drawProc: FnDrawg; eraseProc: FnErase) {.importc: "tte_init_base", header: "tonc.h".}

# Text Attribute Functions
# ------------------------

# Getters:

proc tteGetPos*(x, y: var int) {.importc: "tte_get_pos", header: "tonc.h".}
  ## Get cursor position (mutates parameters)
proc tteGetPos*(): Vec2i {.noinit.} = tteGetPos(result.x, result.y)
  ## Get cursor position as vector
proc tteGetInk*(): uint16 {.importc: "tte_get_ink", header: "tonc.h".}
  ## Get ink color attribute.
proc tteGetShadow*(): uint16 {.importc: "tte_get_shadow", header: "tonc.h".}
  ## Get shadow color attribute.
proc tteGetPaper*(): uint16 {.importc: "tte_get_paper", header: "tonc.h".}
  ## Get paper color attribute.
proc tteGetSpecial*(): uint16 {.importc: "tte_get_special", header: "tonc.h".}
  ## Get special color attribute.
proc tteGetSurface*(): SurfacePtr {.importc: "tte_get_surface", header: "tonc.h".}
  ## Get a pointer to the text surface.
proc tteGetFont*(): Font {.importc: "tte_get_font", header: "tonc.h".}
  ## Get the active font
proc tteGetDrawg*(): FnDrawg {.importc: "tte_get_drawg", header: "tonc.h".}
  ## Get the active character plotter
proc tteGetErase*(): FnErase {.importc: "tte_get_erase", header: "tonc.h".}
  ## Get the erase function
proc tteGetStringTable*(): cstringArray {.importc: "tte_get_string_table", header: "tonc.h".}
  ## Get string table
proc tteGetFontTable*(): ptr Font {.importc: "tte_get_font_table", header: "tonc.h".}
  ## Get font table

# Setters:

proc tteSetPos*(x, y: int) {.importc: "tte_set_pos", header: "tonc.h".}
  ## Set cursor position
proc tteSetInk*(cattr: uint16) {.importc: "tte_set_ink", header: "tonc.h".}
  ## Set ink color attribute.
proc tteSetShadow*(cattr: uint16) {.importc: "tte_set_shadow", header: "tonc.h".}
  ## Set shadow color attribute.
proc tteSetPaper*(cattr: uint16) {.importc: "tte_set_paper", header: "tonc.h".}
  ## Set paper color attribute.
proc tteSetSpecial*(cattr: uint16) {.importc: "tte_set_special", header: "tonc.h".}
  ## Set special color attribute.
proc tteSetSurface*(srf: SurfacePtr) {.importc: "tte_set_surface", header: "tonc.h".}
  ## Set the text surface.
proc tteSetFont*(font: Font) {.importc: "tte_set_font", header: "tonc.h".}
  ## Set the font
proc tteSetDrawg*(fn: FnDrawg = nil) {.importc: "tte_set_drawg", header: "tonc.h".}
  ## Set the character plotter
proc tteSetErase*(fn: FnErase) {.importc: "tte_set_erase", header: "tonc.h".}
  ## Set the erase function
proc tteSetStringTable*(table: ptr cstring) {.importc: "tte_set_string_table", header: "tonc.h".}
  ## Set string table
proc tteSetFontTable*(table: ptr Font) {.importc: "tte_set_font_table", header: "tonc.h".}
  ## Set font table
proc tteSetMargins*(left: int; top: int; right: int; bottom: int) {.importc: "tte_set_margins", header: "tonc.h".}

# Console Functions
# -----------------
# These functions allow you to use stdio routines for writing, like printf, puts and such.
# proc tteInitCon*() {.importc: "tte_init_con", header: "tonc.h".}
# proc tteCmdVt100*(text: cstring): int {.importc: "tte_cmd_vt100", header: "tonc.h".}
# proc tteConWrite*(r: ptr _reent; fd: int; text: cstring; len: csize): csize {.importc: "tte_con_write", header: "tonc.h".}
# proc tteConNocash*(r: ptr _reent; fd: int; text: cstring; len: csize): csize {.importc: "tte_con_nocash", header: "tonc.h".}

# Regular tilemaps
# ----------------
# The tilemap sub-system loads the tiles into memory first, then
# writes to the map to show the letters. For this to work properly,
# the glyph sizes should be 8-pixel aligned.
# Note: At present, the regular tilemap text ignores screenblock
#  boundaries, so 512px wide maps may not work properly.

proc tteInitSe*(bgnr: int; bgcnt: BgCnt; se0: ScrEntry; clrs: uint32; bupofs: uint32; font: Font = addr(fwfDefault); fn: FnDrawg = nil) {.importc: "tte_init_se", header: "tonc.h".}
  ## Initialize text system for screen-entry fonts.
  ## `bgnr`   Number of background to be used for text.
  ## `bgcnt`  Background control flags.
  ## `se0`    Base screen entry. This allows a greater range in capabilities, like offset tile-starts and palettes.
  ## `clrs`   colors to use for the text. The palette entries used depends on `se0` and `bupofs`.
  ## `bupofs` Flags for font bit-unpacking. Basically indicates pixel values (and hence palette use).
  ## `font`   Font to initialize with.
  ## `fn`     Glyph renderer.

proc seErase*(left: int; top: int; right: int; bottom: int) {.importc: "se_erase", header: "tonc.h".}
  ## Erase part of the regular tilemap canvas.
proc seDrawgW8H8*(gid: uint) {.importc: "se_drawg_w8h8", header: "tonc.h".}
  ## Character-plot for reg BGs using an 8x8 font.
proc seDrawgW8H16*(gid: uint) {.importc: "se_drawg_w8h16", header: "tonc.h".}
  ## Character-plot for reg BGs using an 8x16 font.
proc seDrawg*(gid: uint) {.importc: "se_drawg", header: "tonc.h".}
  ## Character-plot for reg BGs, any sized font.
proc seDrawgS*(gid: uint) {.importc: "se_drawg_s", header: "tonc.h".}
  ## Character-plot for reg BGs, any sized, vertically tiled font.

# Affine tilemaps
# ---------------
proc tteInitAse*(bgnr: int; bgcnt: BgCnt; ase0: uint8; clrs: uint32; bupofs: uint32; font: Font = addr(fwfDefault); fn: FnDrawg = nil) {.importc: "tte_init_ase", header: "tonc.h".}
  ## 
proc aseErase*(left: int; top: int; right: int; bottom: int) {.importc: "ase_erase", header: "tonc.h".}
  ## Erase part of the affine tilemap canvas.
proc aseDrawgW8H8*(gid: uint) {.importc: "ase_drawg_w8h8", header: "tonc.h".}
  ## Character-plot for affine BGs using an 8x16 font.
proc aseDrawgW8H16*(gid: uint) {.importc: "ase_drawg_w8h16", header: "tonc.h".}
  ## Character-plot for affine BGs using an 8x16 font.
proc aseDrawg*(gid: uint) {.importc: "ase_drawg", header: "tonc.h".}
  ## Character-plot for affine Bgs, any size.
proc aseDrawgS*(gid: uint) {.importc: "ase_drawg_s", header: "tonc.h".}
  ## Character-plot for affine BGs, any sized, vertically oriented font.

# 4bpp tiles
# ----------
# There are actually two *chr4* systems. The difference
# between the two is the ordering of the tiles: column-major
# versus row-major. Since column-major is 'better', this is
# considered the primary sub-system for tiled text.

proc tteInitChr4c*(bgnr: int; bgcnt: BgCnt, se0: uint16; cattrs, clrs: uint32; font: Font = addr(vwfDefault); fn: FnDrawg = nil) {.importc: "tte_init_chr4c", header: "tonc.h".}
  ## Initialize text system for 4bpp tiled, column-major surfaces.
  ## `bgnr`   Background number.
  ## `bgcnt`  Background control flags.
  ## `se0`    Base offset for screen-entries.
  ## `cattrs` Color attributes; one byte per attr.
  ## `clrs`   ink(/shadow) colors.
  ## `font`   Font to initialize with.
  ## `fn`     Glyph renderer
  
proc chr4cErase*(left, top, right, bottom: int) {.importc: "chr4c_erase", header: "tonc.h".}
  ## Erase part of the 4bpp text canvas.

proc chr4cDrawgB1CTS*(gid: uint) {.importc: "chr4c_drawg_b1cts_fast", header: "tonc.h".}
  ## Render 1bpp fonts to 4bpp tiles, column-major

proc chr4cDrawgB4CTS*(gid: uint) {.importc: "chr4c_drawg_b4cts_fast", header: "tonc.h".}
  ## Render 4bpp fonts to 4bpp tiles, column-major


proc tteInitChr4r*(bgnr: int; bgcnt: BgCnt; se0: uint16; cattrs: uint32; clrs: uint32; font: Font = addr(vwfDefault); fn: FnDrawg = nil) {.importc: "tte_init_chr4r", header: "tonc.h".}
  ## Initialize text system for 4bpp tiled, column-major surfaces.
  ## `bgnr`   Background number.
  ## `bgcnt`  Background control flags.
  ## `se0`    Base offset for screen-entries.
  ## `cattrs` Color attributes; one byte per attr.
  ## `clrs`   ink(/shadow) colors.
  ## `font`   Font to initialize with.
  ## `fn`     Glyph renderer

proc chr4rErase*(left, top, right, bottom: int) {.importc: "chr4r_erase", header: "tonc.h".}
  ## Erase part of the 4bpp text canvas.
